# ada-2023-project-blackada

./: .gitignore  README.md  REPRODUCE.md  astro.md  demo.ipynb  main.ipynb  process_data.py  pyproject.toml  run.ipynb
playground/: beers_exploration.ipynb  eda.ipynb  embedding_models.ipynb  experiments.ipynb  extract.ipynb  extractors.ipynb  interpretability.ipynb  peter_exploration.ipynb  reviews_exploration.ipynb  users_exploration.ipynb
playground/model_choice/: embedding_models.py  model_choice.ipynb
src/: aggregator.py  consensus.py  embedders.py  extractors.py  pipeline.py  utils.py  visualise.py  visualization.py
utils/: dataset.py  embedders.py  extractors.py  text.py
