[tool.poetry]
name = "ada-2023-project-blackada"
version = "0.1.0"
description = "Unlocking the Palate - Evaluating Taste Consensus Among Beer Reviewers"
authors = ["Mika Senghaas <mail@mikasenghaas.de>"]
readme = "README.md"
packages = [{include = "ada_2023_project_blackada"}]

[tool.poetry.dependencies]
python = "3.10.*"
ipykernel = "^6.26.0"
pandas = "^2.1.2"
transformers = "^4.35.0"
spacy = "^3.7.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
